--- a/react-project/package.json
+++ b/react-project/package.json
@@ -8,12 +8,18 @@
     "@testing-library/user-event": "^7.2.1",
     "antd-mobile": "^2.3.3",
     "immutable": "^4.0.0-rc.12",
+    "lib-flexible": "^0.3.2",
+    "postcss-px2rem": "^0.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-keep-alive": "^2.5.2",
     "react-redux": "^7.2.1",
+    "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
+    "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
@@ -42,6 +48,7 @@
     "customize-cra": "^1.0.0",
     "less": "^3.12.2",
     "less-loader": "^6.2.0",
+    "postcss-loader": "^3.0.0",
     "react-app-rewired": "^2.1.6"
   },
   "proxy": "http://0.0.0.0:3000/"
