--- a/vue/package.json
+++ b/vue/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "postcss-px2rem": "^0.3.0",
     "vant": "^2.8.6",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
@@ -26,6 +27,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "less-loader": "^6.1.0",
+    "postcss-loader": "^3.0.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
